# rust-examples

./: Cargo.toml  README.md
.cargo/: config.toml
apps/app_suite/api/: Cargo.toml
apps/app_suite/api/src/: main.rs
apps/app_suite/cli/: Cargo.toml
apps/app_suite/cli/src/: main.rs
apps/game_suite/flappy_ascii/: Cargo.toml
apps/game_suite/flappy_ascii/src/: main.rs
apps/game_suite/treehouse/: Cargo.toml
apps/game_suite/treehouse/src/: main.rs
crates/core-utils/: Cargo.toml
crates/core-utils/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
tests/: api_end_to_end.rs
tools/schema-gen/: Cargo.toml
tools/schema-gen/src/: main.rs
