[workspace]
members = [
  "crates/*",
  "apps/*/*",
  "tools/*",
]
default-members = ["crates/*", "apps/app_suite/api", "apps/app_suite/cli", "apps/game_suite/treehouse", "apps/game_suite/flappy_ascii", "tools/*"]

resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "deny"
